# ChangeLog for sci-libs/fftw
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Jan 2015; Marius Brehler <marbre@linux.sungazer.de> fftw-9999.ebuild,
  metadata.xml:
  Convert to CPU_FLAGS_X86 (adopted from tree)

  04 Jul 2014; Justin Lecher <jlec@gentoo.org> fftw-9999.ebuild:
  Drop reference to app-emulation/emul-linux-x86-soundlibs

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> fftw-9999.ebuild:
  Switch from git-2 to git-r3

  17 Sep 2013; Christoph Junghans <ottxor@gentoo.org> -Manifest,
  -fftw-3.3.3-r3.ebuild:
  moved to gx86

  07 Sep 2013; Christoph Junghans <ottxor@gentoo.org> fftw-3.3.3-r3.ebuild,
  fftw-9999.ebuild:
  final clean up

  02 Sep 2013; Christoph Junghans <ottxor@gentoo.org> fftw-3.3.3-r3.ebuild,
  fftw-9999.ebuild:
  clean up

*fftw-3.3.3-r3 (01 Sep 2013)
*fftw-9999 (01 Sep 2013)

  01 Sep 2013; Christoph Junghans <ottxor@gentoo.org> +fftw-3.3.3-r3.ebuild,
  +fftw-9999.ebuild, +files/fftw-3.3.3-install-header.patch, +metadata.xml:
  import from gx86