@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*fftw-3.3.4-r1 (17 Feb 2015)
+
+  17 Feb 2015; Christoph Junghans <ottxor@gentoo.org> +fftw-3.3.4-r1.ebuild:
+  added full multilib version
+
   29 Jan 2015; Marius Brehler <marbre@linux.sungazer.de> fftw-9999.ebuild,
   metadata.xml:
   Convert to CPU_FLAGS_X86 (adopted from tree)
